<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_program_title"
        tools:layout_editor_absoluteX="134dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_desc"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/et_program_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/program_title_hint"
        android:inputType="textCapWords|textAutoComplete"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_program_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/program_desc_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:autofillHints="description"
        app:layout_constraintTop_toBottomOf="@id/et_program_title"
        android:layout_marginTop="8dp"/>

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/et_program_desc"
        android:layout_marginTop="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_days"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_difficulty"
        app:layout_constraintBottom_toTopOf="@id/btn_add_day"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_add_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_day_button"
        app:layout_constraintTop_toBottomOf="@id/recycler_days"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_save_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_program_button"
        app:layout_constraintTop_toBottomOf="@id/btn_add_day"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
